# taco

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CODE_REVIEW.md  Cargo.toml  Dockerfile  README.en.md  README.md  compose.production.yaml  compose.yaml  deny.toml  deployment.cn.md  deployment.md  justfile  locale-contract.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/backend/: AGENTS.md  Cargo.toml  build.rs
apps/backend/src/: app_state.rs  app_tests.rs  auth.rs  commands.rs  composition.rs  docs.rs  embedded_frontend.rs  embedded_frontend_contract.rs  http_config.rs  installation_mode.rs  main.rs  openapi.rs  startup.rs  system.rs
apps/backend/src/commands/: administrator_command.rs  installation_recovery_command.rs  migration_command.rs  parser.rs  secret_command.rs  tests.rs
apps/backend/src/composition/: access_catalog.rs  audit_wiring.rs  bootstrap_wiring.rs  core_wiring.rs  file_wiring.rs  http_pipeline.rs  rbac_wiring.rs  router_wiring.rs  routes.rs  runtime_config.rs  scheduler_wiring.rs  setup_wiring.rs  system_log_cleanup_execution.rs  tests.rs  tracing_config_listener.rs  tracing_runtime.rs
apps/backend/src/embedded_frontend/: tests.rs
apps/backend/src/migration/: mod.rs  readiness.rs  tests.rs
crates/audit/: Cargo.toml
crates/audit/src/api/: body_capture.rs  dto.rs  endpoint_catalog.rs  endpoints.rs  error.rs  export.rs  input.rs  middleware.rs  middleware_tests.rs  mod.rs  openapi.rs  presenter.rs  sanitize.rs  sanitize_tests.rs  state.rs
crates/audit/src/application/: config.rs  cursor.rs  cursor_tests.rs  error.rs  mod.rs  ports.rs  service.rs  validation.rs
crates/audit/src/domain/: enums.rs  filters.rs  mod.rs  models.rs
crates/audit/src/infra/: command.rs  export_session.rs  limits.rs  login_unlocker.rs  mapping.rs  mod.rs  outbox_projection.rs  outbox_repository.rs  outbox_worker.rs  query.rs  records.rs  repository.rs
crates/captcha/: Cargo.toml
crates/captcha/src/: lib.rs
crates/captcha/src/api/: endpoints.rs  error.rs  handlers.rs  mod.rs  state.rs
crates/captcha/src/application/: config.rs  error.rs  mod.rs  ports.rs  service.rs  service_tests.rs
crates/captcha/src/infra/: mod.rs  redis_store.rs
crates/captcha/src/providers/: config.rs  mod.rs
crates/client_info/: Cargo.toml
crates/client_info/src/: client.rs  error.rs  lib.rs  location.rs
crates/client_info/src/location/: pconline.rs  tests.rs
crates/config/: Cargo.toml
crates/config/src/: bootstrap.rs  connection_types.rs  connections.rs  environment.rs  error.rs  installation_state.rs  lib.rs  loader.rs  profile.rs  runtime_settings.rs  settings.rs  validation.rs
crates/config/src/interpolation/: access.rs  deserializer.rs  mod.rs
crates/config/src/tests/: bootstrap.rs  connections.rs  cors.rs  installation_state.rs  jwt.rs  mod.rs  profile.rs  profiles.rs  runtime.rs  values.rs  yaml_loading.rs
crates/file/: Cargo.toml
crates/file/src/: error.rs  lib.rs
crates/file/src/api/: dto.rs  endpoints.rs  error.rs  mod.rs
crates/file/src/application/: config.rs  mod.rs  models.rs  ports.rs  preview.rs  service.rs  types.rs
crates/file/src/domain/: capacity.rs  deduplication.rs  digest.rs  directory.rs  ids.rs  mod.rs  tag.rs  upload.rs
crates/file/src/infra/: avatar_storage.rs  image_preview.rs  local.rs  mod.rs  repository.rs  repository_cleanup.rs  repository_commands.rs  repository_cursor.rs  repository_cursor_tests.rs  repository_directory_trail.rs  repository_provider_cleanup.rs  repository_purge.rs  repository_queries.rs  repository_session_completion.rs  repository_session_core.rs  repository_session_lifecycle.rs  repository_session_parts.rs  repository_session_reuse.rs  repository_session_support.rs  repository_sessions.rs  repository_space_queries.rs  repository_support.rs  repository_support_tests.rs  repository_system_folders.rs  repository_tests.rs  repository_trash.rs  repository_uploads.rs  repository_views.rs
crates/installation/: Cargo.toml
crates/installation/src/api/: dto.rs  error.rs  handlers.rs  mod.rs  state.rs  tests.rs
crates/installation/src/application/: error.rs  mod.rs  ports.rs  profile.rs  recovery.rs  request.rs  secret.rs  service.rs  status.rs  tests.rs
crates/installation/src/domain/: advanced_setup.rs  mod.rs  setup_input.rs  state.rs  tests.rs
crates/kernel/: Cargo.toml
crates/kernel/src/: error.rs  excel.rs  lib.rs  pagination.rs  pagination_tests.rs  redaction.rs  runtime_config.rs
crates/observability/: Cargo.toml
crates/observability/src/api/: dto.rs  endpoints.rs  error.rs  export.rs  handlers.rs  input.rs  mod.rs  openapi.rs  presenter.rs  state.rs  support.rs  tests.rs
crates/observability/src/application/: cleanup_execution.rs  cursor.rs  error.rs  export_tests.rs  mod.rs  ports.rs  retention.rs  service.rs  service_tests.rs
crates/observability/src/domain/: filters.rs  level.rs  mod.rs  models.rs
crates/observability/src/infra/: command.rs  export_session.rs  export_writer.rs  export_xlsx.rs  mapping.rs  mod.rs  query.rs  records.rs  repository.rs  (+2 more)
crates/rbac/: Cargo.toml
crates/rbac/src/: lib.rs
crates/scheduler/: Cargo.toml
crates/scheduler/src/: lib.rs
crates/scheduler/tests/: scheduler_core.rs  scheduler_macros_ui.rs
crates/storage/: Cargo.toml
crates/storage/src/: database.rs  error.rs  json.rs  lib.rs  outbox.rs
crates/storage/tests/: outbox.rs
crates/system/: Cargo.toml
crates/system/src/: domain.rs  lib.rs
crates/system/tests/: application_service.rs  audited_config.rs
crates/tracing/: Cargo.toml
crates/tracing/src/: fields.rs  http_capture.rs  http_log.rs  infrastructure.rs  lib.rs  macros.rs  metrics.rs  runtime_config.rs  runtime_filter.rs  runtime_state.rs  tests.rs  tracing_init.rs
crates/types/: Cargo.toml  build.rs
crates/types/locales/: en.yml  zh-CN.yml  zh-TW.yml
crates/types/src/: http.rs  lib.rs  pagination.rs  rbac.rs  system.rs  system_dashboard.rs
crates/types/tests/: authorization_transport.rs  file_locale_catalogs.rs  locale_catalogs.rs
crates/user/: Cargo.toml
crates/user/src/: lib.rs  test_support.rs
(+1919 files in other folders)
