[workspace]
members = [
    "apps/backend",
    "crates/captcha",
    "crates/config",
    "crates/constants",
    "crates/kernel",
    "crates/rbac",
    "crates/rbac_macros",
    "crates/storage",
    "crates/system",
    "crates/tracing",
    "crates/types",
    "crates/user",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
argon2 = "0.5.3"
async-trait = "0.1.89"
calamine = "0.31.0"
captcha = { path = "crates/captcha" }
axum = { version = "0.8.9", features = ["multipart"] }
http-body-util = "0.1.3"
hex = "0.4.3"
inventory = "0.3.21"
config_rs = { package = "config", version = "0.15.22", default-features = false, features = ["yaml"] }
configuration = { path = "crates/config" }
constants = { path = "crates/constants" }
hook_tracing = { path = "crates/tracing" }
kernel = { path = "crates/kernel" }
jsonwebtoken = "9.3.1"
matchit = "0.8.4"
metrics = "0.24.2"
metrics-exporter-prometheus = "0.17.2"
proc-macro2 = "1.0.103"
quote = "1.0.42"
rand_core = { version = "0.6.4", features = ["getrandom"] }
rbac = { path = "crates/rbac" }
rbac_macros = { path = "crates/rbac_macros" }
redis = { version = "1.2.1", default-features = false, features = ["tokio-comp", "connection-manager"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
storage = { path = "crates/storage" }
syn = { version = "2.0.111", features = ["full"] }
system = { path = "crates/system" }
tempfile = "3.23.0"
testcontainers = "0.27.3"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "net", "rt-multi-thread"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["compression-gzip", "cors", "request-id", "timeout", "trace"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.20"
types = { path = "crates/types" }
utoipa = { version = "5.5.0", features = ["axum_extras", "decimal_float"] }
utoipa-axum = "0.2.0"
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
user = { path = "crates/user" }
validator = { version = "0.20.0", features = ["derive"] }
uuid = { version = "1.23.1", features = ["v7", "fast-rng"] }
jiff = "0.2.23"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
rust_decimal = { version = "1.41.0", features = ["serde-with-float"] }
rust_xlsxwriter = "0.92.2"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "macros", "time", "uuid", "json", "rust_decimal"] }
time = { version = "0.3.44", features = ["formatting", "parsing"] }
