[package]
name = "backend"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
captcha.workspace = true
async-trait.workspace = true
axum.workspace = true
configuration.workspace = true
constants.workspace = true
hook_tracing.workspace = true
kernel.workspace = true
matchit.workspace = true
rbac.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
scheduler.workspace = true
sqlx.workspace = true
storage.workspace = true
system.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing-appender.workspace = true
types.workspace = true
utoipa.workspace = true
utoipa-scalar.workspace = true
user.workspace = true

[dev-dependencies]
http-body-util.workspace = true
reqwest.workspace = true
time.workspace = true
tower.workspace = true
