[package]
name = "backend"
version.workspace = true
edition.workspace = true
publish.workspace = true
autobins = false

[[bin]]
name = "taco"
path = "src/main.rs"

[features]
default = []
embedded-frontend = ["dep:rust-embed"]

[dependencies]
audit.workspace = true
audit_contract.workspace = true
captcha.workspace = true
async-trait.workspace = true
axum.workspace = true
base64.workspace = true
client_info.workspace = true
configuration.workspace = true
file.workspace = true
futures-util.workspace = true
constants.workspace = true
taco_tracing.workspace = true
kernel.workspace = true
matchit.workspace = true
metrics.workspace = true
observability.workspace = true
rbac.workspace = true
redis.workspace = true
rand_core.workspace = true
reqwest.workspace = true
rust-embed = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
scheduler.workspace = true
sqlx.workspace = true
storage.workspace = true
system.workspace = true
time.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
types.workspace = true
utoipa.workspace = true
utoipa-scalar.workspace = true
user.workspace = true

[dev-dependencies]
http-body-util.workspace = true
reqwest.workspace = true
tempfile.workspace = true
tower.workspace = true
tracing-subscriber.workspace = true
url.workspace = true

[build-dependencies]
serde.workspace = true
serde_json.workspace = true
