[package]
name = "captcha"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
axum.workspace = true
hex.workspace = true
rand_core.workspace = true
redis.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
types.workspace = true

[dev-dependencies]
tokio.workspace = true
