[package]
name = "captcha"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
audit_contract.workspace = true
constants.workspace = true
async-trait.workspace = true
axum.workspace = true
hex.workspace = true
taco_tracing.workspace = true
kernel.workspace = true
rand_core.workspace = true
redis.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
time.workspace = true
types.workspace = true

[dev-dependencies]
tokio.workspace = true
