[package]
name = "configuration"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
config_rs.workspace = true
http = "1.3.1"
serde.workspace = true
serde_path_to_error.workspace = true
sha2.workspace = true
thiserror.workspace = true
url.workspace = true

[dev-dependencies]
redis.workspace = true
