[package]
name = "configuration"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
base64.workspace = true
chacha20poly1305.workspace = true
rand_core.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tempfile.workspace = true
thiserror.workspace = true
url.workspace = true

[dev-dependencies]
redis.workspace = true
