[package]
name = "configuration"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
serde.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
thiserror.workspace = true
url.workspace = true

[dev-dependencies]
redis.workspace = true
tempfile.workspace = true
