[package]
name = "installation"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
async-trait.workspace = true
axum.workspace = true
base64.workspace = true
configuration.workspace = true
kernel.workspace = true
rand_core.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
types.workspace = true

[dev-dependencies]
serde_json.workspace = true
tokio.workspace = true
tower.workspace = true
