[package]
name = "kernel"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
async-trait.workspace = true
base64.workspace = true
calamine.workspace = true
rust_xlsxwriter = { workspace = true, features = ["constant_memory"] }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tempfile.workspace = true
thiserror.workspace = true
utoipa.workspace = true
