[package]
name = "observability"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
async-trait.workspace = true
audit_contract.workspace = true
axum.workspace = true
kernel.workspace = true
rbac.workspace = true
rbac_macros.workspace = true
rust_xlsxwriter = { workspace = true, features = ["constant_memory"] }
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
storage.workspace = true
taco_tracing.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
types.workspace = true
utoipa.workspace = true

[dev-dependencies]
tower.workspace = true
