[package]
name = "rbac"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
async-trait.workspace = true
audit_contract.workspace = true
axum.workspace = true
constants.workspace = true
inventory.workspace = true
taco_tracing.workspace = true
kernel.workspace = true
matchit.workspace = true
rbac_macros.workspace = true
redis.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
storage.workspace = true
thiserror.workspace = true
time.workspace = true
types.workspace = true
utoipa.workspace = true

[dev-dependencies]
base64.workspace = true
tokio.workspace = true
tower.workspace = true
