[package]
name = "scheduler"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
async-trait.workspace = true
audit_contract.workspace = true
axum.workspace = true
base64.workspace = true
chrono.workspace = true
constants.workspace = true
croner.workspace = true
taco_tracing.workspace = true
kernel.workspace = true
metrics.workspace = true
rbac.workspace = true
rbac_macros.workspace = true
scheduler_macros.workspace = true
reqwest.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
storage.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
types.workspace = true

[dev-dependencies]
tokio.workspace = true
trybuild.workspace = true
