[package]
name = "system"
version.workspace = true
edition.workspace = true

[dependencies]
constants.workspace = true
async-trait.workspace = true
axum.workspace = true
inventory.workspace = true
kernel.workspace = true
rbac.workspace = true
rbac_macros.workspace = true
redis.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
storage.workspace = true
thiserror.workspace = true
time.workspace = true
types.workspace = true

[dev-dependencies]
tokio.workspace = true
