[package]
name = "hook_tracing"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
axum.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[dev-dependencies]
