[package]
name = "taco_tracing"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
async-trait.workspace = true
arc-swap.workspace = true
axum.workspace = true
bytes.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
kernel.workspace = true
http-body.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
tokio = { workspace = true, features = ["sync", "time"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
url.workspace = true
uuid.workspace = true

[dev-dependencies]
tower.workspace = true
