[package]
name = "types"
version.workspace = true
edition.workspace = true

[dependencies]
axum.workspace = true
inventory.workspace = true
jiff.workspace = true
kernel.workspace = true
rust_decimal.workspace = true
rust-i18n.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
utoipa.workspace = true

[dev-dependencies]
serde_json.workspace = true
