[package]
name = "types"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
axum.workspace = true
inventory.workspace = true
kernel.workspace = true
rust-i18n.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
utoipa.workspace = true

[dev-dependencies]
serde_json.workspace = true
