[package]
name = "types"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
axum.workspace = true
futures-util.workspace = true
kernel.workspace = true
rust-i18n.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true
tokio = { workspace = true, features = ["fs", "io-util"] }
utoipa.workspace = true

[dev-dependencies]
http-body-util.workspace = true
serde_json.workspace = true
