[package]
name = "user"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
argon2.workspace = true
async-trait.workspace = true
axum.workspace = true
constants.workspace = true
encoding_rs.workspace = true
inventory.workspace = true
jsonwebtoken.workspace = true
public-ip-address.workspace = true
kernel.workspace = true
rand_core.workspace = true
redis.workspace = true
rbac.workspace = true
rbac_macros.workspace = true
regex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
storage.workspace = true
thiserror.workspace = true
hook_tracing.workspace = true
time.workspace = true
tokio.workspace = true
types.workspace = true
utoipa.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio.workspace = true
tower.workspace = true
